# terminal_ai_test

./: .gitignore  CMakeLists.txt  Cargo.toml
.cache/clangd/index/: abi_macros.hpp.7DC6BD156EBA524D.idx  adl_serializer.hpp.C0514D9FD6361D0F.idx  begin.hpp.4BD0BA4D2BDD8726.idx  binary_reader.hpp.C455BE34179F7420.idx  binary_writer.hpp.2650075C6BDA5075.idx  byte_container_with_subtype.hpp.B41CD6A6F22009F0.idx  completion.hpp.26FAE00C5854B135.idx  cpp_future.hpp.5316E443A1739E1E.idx  detected.hpp.B3C6D9022142BB17.idx  end.hpp.FDA430579B38F6E7.idx  exceptions.hpp.8B2DD7D61C9C70E7.idx  from_json.hpp.5A630D3B7808EF19.idx  hash.hpp.34CEBD445E20B55C.idx  hedley.hpp.B7D4AA980927004A.idx  hedley_undef.hpp.06CA9A89096432A5.idx  identity_tag.hpp.B2FCCB2A79BC64E4.idx  input_adapters.hpp.A05BF31E4B38DDA6.idx  internal_iterator.hpp.8094A9739DA10169.idx  is_sax.hpp.F6710D5A3CEFFBCC.idx  iter_impl.hpp.16193DA798C7B2E3.idx  iteration_proxy.hpp.6EFDD0C636FC730C.idx  iterator_traits.hpp.51C6224BCD5E07A9.idx  json.hpp.04168994BCAF8BC8.idx  json_custom_base_class.hpp.235DBB5160115236.idx  json_fwd.hpp.5116C9BCBBABD626.idx  json_pointer.hpp.3021A79033F61FB4.idx  json_ref.hpp.D09A74AF3DDC55AF.idx  json_reverse_iterator.hpp.45C51951008C1B81.idx  json_sax.hpp.F748862523424996.idx  lexer.hpp.A6E1914CE4A8E56E.idx  macro_scope.hpp.F4BB33D0AE44532D.idx  macro_unscope.hpp.45B560FD4CD58F42.idx  main.cpp.37CA209AFB2FF378.idx  ollama.hpp.74F61A20FB516DFC.idx  ordered_map.hpp.6BA060AB9FF63548.idx  (+14 more)
src/: completion.hpp  file_ops.hpp  main.cpp  main.rs  ollama.hpp  shell.hpp  utils.hpp
